新增：server启动失败的解决方法，server启动成功，但提示启动失败的解决方法